# backend/docs/swagger.json
@@ -759,7 +759,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ent.Systemequipment"
+                            "$ref": "#/definitions/controllers.Systemequipment"
                         }
                     }
                 ],
@@ -767,7 +767,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.Systemequipment"
+                            "$ref": "#/definitions/controllers.Systemequipment"
                         }
                     },
                     "400": {
@@ -924,6 +924,23 @@
         }
     },
     "definitions": {
+        "controllers.Systemequipment": {
+            "type": "object",
+            "properties": {
+                "nameEquipmentID": {
+                    "type": "integer"
+                },
+                "physicianID": {
+                    "type": "integer"
+                },
+                "stockEquipmentID": {
+                    "type": "integer"
+                },
+                "typeEquipmentID": {
+                    "type": "integer"
+                }
+            }
+        },
         "ent.MedicalEquipment": {
             "type": "object",
             "properties": {
